--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="40w-Gb-5Ay">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -66,6 +65,7 @@
                         <segue destination="T6I-32-vHK" kind="relationship" relationship="viewControllers" id="cKs-rX-y2T"/>
                         <segue destination="HZw-ZX-5Jx" kind="relationship" relationship="viewControllers" id="Jiz-Vq-dY3"/>
                         <segue destination="6JO-WD-3s3" kind="relationship" relationship="viewControllers" id="ECV-rY-VHf"/>
+                        <segue destination="UO9-3S-htB" kind="relationship" relationship="viewControllers" id="24Z-B8-JKP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6NG-Ba-U4e" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -631,11 +631,94 @@ SESSÃO</string>
             </objects>
             <point key="canvasLocation" x="-5391.1999999999998" y="1185.1574212893554"/>
         </scene>
+        <!--Definições-->
+        <scene sceneID="ZoN-Ra-gA7">
+            <objects>
+                <tableViewController id="UO9-3S-htB" customClass="SettingsTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="zcL-Mp-Hld">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <sections>
+                            <tableViewSection headerTitle="Definições" id="hOp-Zy-glf">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="f0T-0x-JG2">
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="f0T-0x-JG2" id="zHn-Ia-2PN">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mostrar guia inicial de AGG" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNW-17-1d2">
+                                                    <rect key="frame" x="8" y="11" width="207" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pNl-A2-UBI">
+                                                    <rect key="frame" x="318" y="6" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="showInstructionsSwitchValueChanged:" destination="UO9-3S-htB" eventType="valueChanged" id="CU3-av-Rmu"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pNl-A2-UBI" secondAttribute="trailing" id="RdE-lw-5c0"/>
+                                                <constraint firstItem="cNW-17-1d2" firstAttribute="centerY" secondItem="zHn-Ia-2PN" secondAttribute="centerY" id="fNg-ZB-kvT"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="cNW-17-1d2" secondAttribute="leading" id="gNS-8t-fVv"/>
+                                                <constraint firstItem="pNl-A2-UBI" firstAttribute="centerY" secondItem="zHn-Ia-2PN" secondAttribute="centerY" id="vAH-gG-sbV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Módulos" id="csI-Eh-wqQ">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="CEv-E2-zfP">
+                                        <rect key="frame" x="0.0" y="155.5" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CEv-E2-zfP" id="CWH-Dc-6fk">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_original" translatesAutoresizingMaskIntoConstraints="NO" id="otf-zs-oq1">
+                                                    <rect key="frame" x="0.0" y="-2" width="375" height="153.5"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="otf-zs-oq1" firstAttribute="leading" secondItem="CWH-Dc-6fk" secondAttribute="leading" id="BFa-u5-hv7"/>
+                                                <constraint firstAttribute="trailing" secondItem="otf-zs-oq1" secondAttribute="trailing" id="gkL-Ze-mZC"/>
+                                                <constraint firstItem="otf-zs-oq1" firstAttribute="centerX" secondItem="CWH-Dc-6fk" secondAttribute="centerX" id="ll7-aI-HJq"/>
+                                                <constraint firstItem="otf-zs-oq1" firstAttribute="top" secondItem="CWH-Dc-6fk" secondAttribute="topMargin" constant="-10" id="q4B-n0-EtP"/>
+                                                <constraint firstItem="otf-zs-oq1" firstAttribute="centerY" secondItem="CWH-Dc-6fk" secondAttribute="centerY" id="tHx-jm-T74"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="UO9-3S-htB" id="cPL-pn-bcE"/>
+                            <outlet property="delegate" destination="UO9-3S-htB" id="M3g-2p-NcL"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Definições" image="Settings-50" id="soO-hS-hLH"/>
+                    <navigationItem key="navigationItem" id="S65-Cj-3s8"/>
+                    <connections>
+                        <outlet property="showInstructionsSwitch" destination="pNl-A2-UBI" id="Nfs-Em-Mii"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kpo-YJ-UEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1591" y="477"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Account" width="25" height="25"/>
         <image name="Info-50" width="25" height="25"/>
+        <image name="Settings-50" width="25" height="25"/>
         <image name="icon_cat" width="16" height="16"/>
+        <image name="icon_original" width="512" height="512"/>
         <image name="pill" width="13" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
