--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -45,12 +45,11 @@
                         <outlet property="progressView" destination="1Y6-Xo-uQV" id="eB8-bj-sDk"/>
                         <segue destination="ldk-HW-20u" kind="show" identifier="leaveInitialSetup" id="5sa-nP-6NU"/>
                         <segue destination="QnG-gH-AWg" kind="show" identifier="NavigatePersonalArea" id="aAJ-mt-opf"/>
-                        <segue destination="Lmd-4V-Rmi" kind="presentation" identifier="showAppIntro" id="eSa-5X-gco"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JC0-GJ-mII" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4559" y="280"/>
+            <point key="canvasLocation" x="-4116" y="-383"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Mur-gJ-XWJ">
@@ -388,27 +387,6 @@
             </objects>
             <point key="canvasLocation" x="-1939" y="-778"/>
         </scene>
-        <!--App Intro-->
-        <scene sceneID="7nx-d8-sZx">
-            <objects>
-                <viewController id="Lmd-4V-Rmi" customClass="AppIntro" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="TxJ-9N-f4x"/>
-                        <viewControllerLayoutGuide type="bottom" id="KVb-Mi-MdO"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="a2n-La-4BX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.98624199629999998" green="0.77968657019999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                    <connections>
-                        <segue destination="ldk-HW-20u" kind="show" identifier="leaveAppIntro" id="Tjg-tp-tyX"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ze1-NC-yiA" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4318" y="-777"/>
-        </scene>
         <!--AGG-->
         <scene sceneID="3ZK-7Z-4lY">
             <objects>
@@ -631,10 +609,10 @@ SESSÃO</string>
             </objects>
             <point key="canvasLocation" x="-5391.1999999999998" y="1185.1574212893554"/>
         </scene>
-        <!--Definições-->
+        <!--Settings-->
         <scene sceneID="ZoN-Ra-gA7">
             <objects>
-                <tableViewController id="UO9-3S-htB" customClass="SettingsTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="UO9-3S-htB" userLabel="Settings" customClass="SettingsTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="zcL-Mp-Hld">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -672,7 +650,7 @@ SESSÃO</string>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Módulos" id="csI-Eh-wqQ">
+                            <tableViewSection headerTitle="Módulos" id="csI-Eh-wqQ" userLabel="Sobre">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="CEv-E2-zfP">
                                         <rect key="frame" x="0.0" y="155.5" width="375" height="150"/>
@@ -691,6 +669,94 @@ SESSÃO</string>
                                                 <constraint firstItem="otf-zs-oq1" firstAttribute="centerX" secondItem="CWH-Dc-6fk" secondAttribute="centerX" id="ll7-aI-HJq"/>
                                                 <constraint firstItem="otf-zs-oq1" firstAttribute="top" secondItem="CWH-Dc-6fk" secondAttribute="topMargin" constant="-10" id="q4B-n0-EtP"/>
                                                 <constraint firstItem="otf-zs-oq1" firstAttribute="centerY" secondItem="CWH-Dc-6fk" secondAttribute="centerY" id="tHx-jm-T74"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection headerTitle="Módulos" id="d1q-34-rSi" userLabel="Módulos">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pLl-DZ-Ay7">
+                                        <rect key="frame" x="0.0" y="361.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pLl-DZ-Ay7" id="3gN-QB-gjL">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Consultar critérios de prescriçao para pacientes geriátricos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEA-fU-Ihi">
+                                                    <rect key="frame" x="8" y="11" width="453" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sLe-tc-wY2">
+                                                    <rect key="frame" x="318" y="6" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="showInstructionsSwitchValueChanged:" destination="UO9-3S-htB" eventType="valueChanged" id="lOx-AV-7w2"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sLe-tc-wY2" firstAttribute="centerY" secondItem="3gN-QB-gjL" secondAttribute="centerY" id="7RD-9L-DxS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="sLe-tc-wY2" secondAttribute="trailing" id="JYa-JH-M0h"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="WEA-fU-Ihi" secondAttribute="leading" id="X2h-gA-Ihr"/>
+                                                <constraint firstItem="WEA-fU-Ihi" firstAttribute="centerY" secondItem="3gN-QB-gjL" secondAttribute="centerY" id="Y5f-Zz-vMs"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="85J-0g-E42">
+                                        <rect key="frame" x="0.0" y="405.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="85J-0g-E42" id="89x-55-nlc">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Criar e consultar processo de paciente" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvO-b9-TLh">
+                                                    <rect key="frame" x="8" y="11" width="295" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C6a-qq-L6S">
+                                                    <rect key="frame" x="318" y="6" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="showInstructionsSwitchValueChanged:" destination="UO9-3S-htB" eventType="valueChanged" id="dO3-bO-bCZ"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="C6a-qq-L6S" secondAttribute="trailing" id="FuN-t1-cIb"/>
+                                                <constraint firstItem="TvO-b9-TLh" firstAttribute="centerY" secondItem="89x-55-nlc" secondAttribute="centerY" id="lN0-s1-Y5A"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="TvO-b9-TLh" secondAttribute="leading" id="nIM-Gz-9Do"/>
+                                                <constraint firstItem="C6a-qq-L6S" firstAttribute="centerY" secondItem="89x-55-nlc" secondAttribute="centerY" id="vZg-v6-FMm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="PWN-kO-Iah">
+                                        <rect key="frame" x="0.0" y="449.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PWN-kO-Iah" id="Lb8-dc-o8M">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avaliar o paciente por outra escala" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klZ-9Z-gxf">
+                                                    <rect key="frame" x="8" y="11" width="262.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KDH-Z4-avr">
+                                                    <rect key="frame" x="318" y="6" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="showInstructionsSwitchValueChanged:" destination="UO9-3S-htB" eventType="valueChanged" id="y1f-xR-0CK"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="KDH-Z4-avr" firstAttribute="centerY" secondItem="Lb8-dc-o8M" secondAttribute="centerY" id="3FL-qf-wv2"/>
+                                                <constraint firstItem="klZ-9Z-gxf" firstAttribute="centerY" secondItem="Lb8-dc-o8M" secondAttribute="centerY" id="bNv-NL-dR5"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="klZ-9Z-gxf" secondAttribute="leading" id="dVJ-ge-NBa"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="KDH-Z4-avr" secondAttribute="trailing" id="uBU-6z-51t"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -722,7 +788,6 @@ SESSÃO</string>
         <image name="pill" width="13" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5sa-nP-6NU"/>
         <segue reference="aAJ-mt-opf"/>
     </inferredMetricsTieBreakers>
 </document>
