--- a/GeriatricHelper/Base.lproj/CGAGuide.storyboard
+++ b/GeriatricHelper/Base.lproj/CGAGuide.storyboard
@@ -33,7 +33,7 @@
         <scene sceneID="mYp-1J-Dha">
             <objects>
                 <collectionViewController id="FHU-fK-eCt" customClass="CGAGuideAreasCollectionViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="89Q-KS-Bas">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="89Q-KS-Bas">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -45,14 +45,14 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" reuseIdentifier="Cell" id="pF6-PW-qlF" customClass="CGAGuideAreaCollectionViewCell" customModule="GeriatricHelper" customModuleProvider="target">
-                                <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
+                                <rect key="frame" x="88" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Flg-pa-tFV" userLabel="Icon">
-                                            <rect key="frame" x="0.0" y="31" width="200" height="140.5"/>
+                                            <rect key="frame" x="0.0" y="31" width="200" height="140"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Area" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EqQ-aa-uH7" userLabel="Area">
                                             <rect key="frame" x="79" y="0.0" width="43" height="23"/>
@@ -61,7 +61,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2BS-pg-LUI">
-                                            <rect key="frame" x="56" y="179.5" width="88" height="20.5"/>
+                                            <rect key="frame" x="0.0" y="179" width="200" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -70,9 +70,11 @@
                                 </view>
                                 <constraints>
                                     <constraint firstItem="EqQ-aa-uH7" firstAttribute="centerX" secondItem="pF6-PW-qlF" secondAttribute="centerX" id="459-bI-hJc"/>
+                                    <constraint firstItem="Flg-pa-tFV" firstAttribute="top" secondItem="EqQ-aa-uH7" secondAttribute="bottom" constant="8" id="6f8-jB-eOS"/>
+                                    <constraint firstItem="2BS-pg-LUI" firstAttribute="leading" secondItem="pF6-PW-qlF" secondAttribute="leadingMargin" constant="-8" id="7pM-LA-oXx"/>
                                     <constraint firstItem="Flg-pa-tFV" firstAttribute="centerX" secondItem="pF6-PW-qlF" secondAttribute="centerX" id="I15-Gp-mBK"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="2BS-pg-LUI" secondAttribute="bottom" constant="-8" id="StA-PF-Bq7"/>
-                                    <constraint firstItem="Flg-pa-tFV" firstAttribute="top" secondItem="EqQ-aa-uH7" secondAttribute="bottom" constant="8" id="VLf-C7-t2s"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="2BS-pg-LUI" secondAttribute="trailing" constant="-8" id="Vz4-c5-GE1"/>
                                     <constraint firstItem="EqQ-aa-uH7" firstAttribute="top" secondItem="pF6-PW-qlF" secondAttribute="topMargin" constant="-8" id="fdT-jx-Pzl"/>
                                     <constraint firstItem="2BS-pg-LUI" firstAttribute="top" secondItem="Flg-pa-tFV" secondAttribute="bottom" constant="8" id="ipQ-YY-D7f"/>
                                     <constraint firstItem="2BS-pg-LUI" firstAttribute="centerX" secondItem="pF6-PW-qlF" secondAttribute="centerX" id="wcL-Fo-Hr4"/>
@@ -92,10 +94,41 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="RcL-IN-1Tk"/>
+                    <connections>
+                        <segue destination="w9c-yj-s6N" kind="show" identifier="ScalesForAreaSegue" id="9df-U6-xJ9"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3dW-WD-D9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3285.5999999999999" y="2635.2323838080961"/>
+        </scene>
+        <!--Guide Scales For Area-->
+        <scene sceneID="7wZ-hX-tvT">
+            <objects>
+                <tableViewController id="w9c-yj-s6N" customClass="CGAGuideScalesForArea" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="bOx-ai-L2l">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="OOT-oM-hc5">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OOT-oM-hc5" id="xyc-Fe-zL4">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="w9c-yj-s6N" id="QlP-Yg-eUT"/>
+                            <outlet property="delegate" destination="w9c-yj-s6N" id="yKx-5u-kGb"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5l9-qB-kam" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3990" y="2643"/>
         </scene>
     </scenes>
     <resources>
