--- a/GeriatricHelper/Base.lproj/Help.storyboard
+++ b/GeriatricHelper/Base.lproj/Help.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G23a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fJr-Uu-Qtt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G24b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fJr-Uu-Qtt">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,7 +55,7 @@
         <scene sceneID="6CN-h8-Ouv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fJr-Uu-Qtt" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Ajuda" image="Settings-50" id="Fyz-2k-Ivn"/>
+                    <tabBarItem key="tabBarItem" title="Ajuda" image="Info-50" id="Fyz-2k-Ivn"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PBG-yj-aJH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -107,6 +106,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Settings-50" width="25" height="25"/>
+        <image name="Info-50" width="25" height="25"/>
     </resources>
 </document>
