--- a/GeriatricHelper/YesNoQuestionTableViewCell.xib
+++ b/GeriatricHelper/YesNoQuestionTableViewCell.xib
@@ -19,8 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7D-Eg-d2N">
-                        <rect key="frame" x="8" y="8" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7D-Eg-d2N">
+                        <rect key="frame" x="8" y="8" width="304" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -75,6 +75,7 @@
                     <constraint firstItem="7qV-jF-Vmw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hqa-bW-3Yb"/>
                     <constraint firstItem="b6J-tW-a5j" firstAttribute="top" secondItem="7qV-jF-Vmw" secondAttribute="top" id="kvD-Kf-iOi"/>
                     <constraint firstAttribute="bottomMargin" secondItem="b6J-tW-a5j" secondAttribute="bottom" constant="-8.5" id="lJn-TW-Yvx"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="X7D-Eg-d2N" secondAttribute="trailing" id="oxR-zi-SJ7"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
